# AutoTA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/berkeley/alg_1/: alg_1.md  wrong_sol_1.md  wrong_sol_1_str.json
data/berkeley/berkeley_errorsIncluded/: alg_1_1.md  err_notes.md  linalg_2_2.md
data/berkeley/linalg_1/: linalg_1.md
data/berkeley/linalg_2/: linalg_2.md
data/berkeley/linalg_3/: linalg_3.md
data/test/: berkeley.md
results/: reviews_draft.md
results/BLMC/: blms.70013.json  blms.70015.json  blms.70016.json  blms.70017.json  blms.70023.json
results/collation/: problem3.md
results/test01/problem5/: 14431_sol.md
results/test02/problem1/: 14546_sol.json
results/test03/problem3/: 14546_sol_gpt.json
results/test03/problem5/: 14431_sol.json
results/um101-main/: net_reviews.md
results/um101-main/Problem1-main/: reviews.md
results/um101-main/Problem10-main/: 22067_sol.md  reviews.md
results/um101-main/Problem2-main/: reviews.md
results/um101-main/Problem3-main/: reviews.md
results/um101-main/Problem4-main/: 22120_sol_gpt.json  22211_sol.json
results/um101-main/Problem5-main/: reviews.md
server/: app.py  autota_ui.py  gpt_structured.py
server/static/: scripts.js  styles.css
server/templates/: index.html
src/: GptPaper.ipynb  MathDoc.md  MathDoc.py  berkeley_test.py  chat_llm.py  gemini_structured.py  gpt_structured.py  gpt_structured_xml.py  queries.py  truly_error.py
src/mathdoc/: MathDoc.md
src/prompts/: MathDoc.md  MathDoc_original.md  MathDoc_xml.md  Rubric_xml.md  rubric.md
(+50 files in other folders)
